CSS/style.css
/* Global Styles */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
.barlow-regular {
  font-family: "Barlow", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.barlow-bold {
  font-family: "Barlow", sans-serif;
  font-weight: 700;
  font-style: normal;
}
.primary-btn {
  background-color: #fca311;
  display: inline-block;
  text-decoration: none;
  color: black;
  padding: 10px 20px;
  border-radius: 5px;
  font-size: 18px;
  font-weight: 700;
  transition: all 0.3s;
  border: 1px solid transparent;
}
.primary-btn:hover {
  background: #f19604;
  border: 1px solid #7d4d00;
  color: black;
}
.section-padding-one {
  padding: 80px 0;
}
.section-heading {
  margin-bottom: 80px;
  text-align: center;
}
.section-heading h2 {
  font-weight: 700;
  font-size: 64px;
  line-height: 75px;
}
.section-heading h2 span {
  color: #fca311;
}
.section-heading p {
  font-weight: 700;
  font-size: 24x;
  line-height: 30px;
  max-width: 360px;
  margin: 0 auto;
}

/* Header Styles */
.header-container {
  display: flex;
  padding: 20px 0;
  justify-content: space-between;
}
.header-container::after {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #00000055;
  z-index: -1;
}

/* logo styles */
.header-logo {
  flex-basis: 20%;
}
.header-logo a {
  display: inline-block;
}

/* navbar styles */
.header-menu {
  display: flex;
  align-items: center;
  gap: 20px;
  flex-basis: 80%;
  justify-content: flex-end;
}
.header-nav ul {
  list-style-type: none;
  display: flex;
  gap: 20px;
  margin-bottom: 0;
}
.header-nav ul li {
  border-radius: 3px;
}
.header-nav ul li a {
  text-decoration: none;
  color: white;
  line-height: 20px;
  font-weight: 700;
  transition: all 0.3s;
  padding: 8px 15px;
  display: inline-block;
}
.header-nav ul li a.active {
  color: black;
  background-color: #fca311;
  border-radius: 5px;
}
.header-nav ul li a:hover {
  color: black;
  background-color: #fca311;
  border-radius: 5px;
}
/* search bar styles */

.header-search i {
  color: white;
}

/* header hero styles */
.hero {
  background-image: url("../Assets/images/background-hero.png");
  padding: 250px 0;
  background-size: cover;
  background-position: center;
  position: relative;
}
.hero::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: #00000030;
  z-index: 0;
}
.hero-content {
  position: relative;
  z-index: 1;
}
.hero-content h3 {
  font-size: 36px;
  line-height: 40px;
  font-weight: 700;
  color: #fca311;
  margin-bottom: 20px;
}
.hero-content h2 {
  font-size: 64px;
  line-height: 75px;
  font-weight: 700;
  color: white;
}
.hero-content h2 span {
  display: block;
  color: #fca311;
}
.hero-content p {
  font-size: 18px;
  line-height: 25px;
  font-weight: 400;
  color: white;
  margin-bottom: 30px;
}

/* Secondary hero styles */
.secondary-hero {
  overflow: hidden;
}
.secondary-hero-wrapper {
  display: flex;
  height: 100%;
  gap: 10px;
}
.secondary-hero-left {
  background-color: #fca311;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 50px 0;
  position: relative;
  flex-basis: 65%;
}
.secondary-hero-left::before {
  content: "";
  position: absolute;
  top: 0;
  left: -50000px;
  height: 100%;
  background-color: #fca311;
  right: 100%;
}
.secondary-hero-right {
  background-color: black;
  display: flex;
  flex-basis: 35%;
  position: relative;
  padding: 50px 0;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
}
.secondary-hero-right::after {
  content: "";
  position: absolute;
  top: 0;
  right: -50000px;
  height: 100%;
  background-color: black;
  left: 100%;
}
.secondary-hero-left h3 {
  font-size: 36px;
  line-height: 40px;
  font-weight: 700;
}
.secondary-hero-left h4 {
  font-size: 24px;
  line-height: 30px;
  font-weight: 700;
}
.client-review {
  display: flex;
  align-items: flex-start;
  gap: 30px;
  margin-bottom: 30px;
}

.client-review h5 {
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  color: white;
  text-align: right;
}

.client-review h5 span {
  color: #fca311;
}

/* Why-us styles */

.why-us-content {
  position: relative;
}
.why-us-content::after {
  position: absolute;
  content: "";
  background-image: url("../Assets/images/why-us-back-image.png");
  background-repeat: no-repeat;
  opacity: 10%;
  top: 200px;
  left: -75px;
  right: 0%;
  bottom: 0;
  z-index: -1;
}
.why-us-box {
  text-align: center;
  /* margin-bottom: 80px; */
  padding: 10px 45px;
  transition: all 0.3s;
  border: 1px solid transparent;
  height: 100%;
}
.why-us-box:hover {
  border: 1px solid #fca311;
  border-radius: 5px;
}
.why-us-box-icon {
  margin: 20px 0;
}
.why-us-box h4 {
  font-weight: 700;
  font-size: 36px;
  line-height: 40px;
  margin: 10px 0;
}
.why-us-box p {
  font-weight: 400;
  font-size: 18px;
  line-height: 25px;
}

/* Our-Scope Styles */
.our-scope-left-content {
  background-color: #fca311;
  padding: 60px 35px 60px 0px;
  position: relative;
}
.our-scope-left-content::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: -5000px;
  right: 0;
  background: #fca311;
  z-index: -1;
}
.our-scope-left-content h3 {
  font-weight: 700;
  font-size: 36px;
  line-height: 40px;
  margin-bottom: 20px;
}
.our-scope-left-content span {
  font-weight: 700;
  font-size: 64px;
  line-height: 75px;
  display: inline-block;
  margin-bottom: 20px;
}
.our-scope-left-content h4 {
  font-weight: 700;
  font-size: 48px;
  line-height: 75px;
  color: white;
  margin-bottom: 20px;
}
.our-scope-left-content p {
  font-size: 18px;
  line-height: 25px;
}
.our-scope-list-box {
  text-align: center;
  box-shadow: 0 0 2px 2px #fca3113d;
  border-radius: 5px;
  padding-top: 25px;
  height: 100%;
  overflow: hidden;
  cursor: pointer;
}
.our-scope-list-box h4 {
  font-weight: 700;
  font-size: 24px;
  line-height: 30px;
  margin-bottom: 30px;
  padding: 0 20px;
}
.our-scope-list-box p {
  font-weight: 400;
  font-size: 18px;
  line-height: 25px;
  margin-bottom: 30px;
  padding: 0 20px;
}
.our-scope-list-box img {
  display: block;
  width: 100%;
  border-radius: 0px 0px 5px 5px;
  transition: all 0.3s;
}
.our-scope-list-box:hover img {
  transform: scale(1.1);
}
.our-scope-btn {
  text-align: center;
  margin-top: 150px;
}

/* Featured Projects Styles */

.featured-projects-content-box {
  position: relative;
  margin: 0 0 24px 0;
}
.featured-projects-content-box img {
  display: block;
  width: 100%;
  object-fit: cover;
}
.featured-projects-content-box-info {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding: 20px;
  color: white;
  z-index: 1;
}
.featured-projects-content-box-info::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #00000045;
  z-index: -1;
}
.featured-projects-content-box-info h6 {
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
  margin-bottom: 15px;
}
.featured-projects-content-box-info h4 {
  font-weight: 700;
  font-size: 30px;
  line-height: 40px;
  margin-bottom: 15px;
}
/* .featured-projects-content-box-info p {
  font-weight: 700;
  font-size: 24px;
  line-height: 30px;
} */
.featured-projects-btn {
  text-align: center;
  margin-top: 50px;
}
.featured-projects-btn a {
  display: inline-block;
  font-weight: 700;
  font-size: 20px;
  background-color: transparent;
}
.featured-projects-btn a:hover {
  background: #fcddab;
  border: 1px solid #7d4d00;
  color: black;
}
.featured-projects-btn a span {
  color: #fca311;
}

/* Stats section Styles */
.stats {
  background-image: url(../Assets/images/stats-background.jpg);
  background-size: cover;
  /* background-attachment: fixed; */
  padding: 50px 0 20px 0;
  background-position: center;
}

.all-stats {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.all-stats-item {
  text-align: center;
}
.all-stats-item img {
  margin-bottom: 15px;
}
.all-stats-item h3 {
  color: #fca311;
  font-weight: 700;
  font-size: 48px;
}
.all-stats-item p {
  color: white;
  font-weight: 700;
  font-size: 20px;
}
/* Home Contact Section Styles */
.home-contact {
  background-image: url(../Assets/images/contact-background.jpg);
  background-size: cover;
  position: relative;
  z-index: -2;
}
.home-contact::before {
  position: absolute;
  content: "";
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #00000055;
  z-index: -1;
}
.star-icon {
  display: flex;
  gap: 10px;
  margin-bottom: 20px;
}
.star-icon i {
  color: #fca311;
  font-size: 26px;
}
.home-contact-heading h3 {
  font-weight: 700;
  font-size: 48px;
  line-height: 72px;
  color: #fca311;
}
.home-contact-form {
  margin-top: 50px;
  z-index: 0;
}
.home-contact-form-item {
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-bottom: 30px;
}

.home-contact-form-item label {
  font-size: 20px;
  color: #fff;
}

.home-contact-form-item input {
  padding: 10px 30px 10px 10px;
  border: 0px;
  border-radius: 5px;
  width: 100%;
}

.home-contact-form-item textarea {
  padding: 12px 10px;
  border: 0px;
  border-radius: 5px;
}
.home-contact-form-item input:focus-visible,
.home-contact-form-item textarea:focus-visible {
  outline: 0;
}

.home-contact-form-item input::placeholder,
.home-contact-form-item textarea::placeholder {
  color: #1f2324;
}

.home-contact-form-item-input {
  position: relative;
}

.home-contact-form-item-input span {
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  color: #3c3c3c;
}

